fixed spacing issue

--- a/public/amls.css
+++ b/public/amls.css
@@ -946,7 +946,7 @@ fieldset.panel-indent legend {
 .declaration {
   background: #f8f8f8;
   border-bottom: #dee0e2 solid 3px;
-  margin: 0;
+  margin: 0 0 40px 0;
   padding: 20px;
 }
 
@@ -1241,3 +1241,5 @@ details {
 .partial-deskpro-form .report-error {
   margin: 0;
 }
+
+
